# End-to-End-RL-agent-UAV-flight-controller

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-ci.yml  fw-ci.yml  sim-ci.yml
WBS/: 00_README.md  00_WBS_Master_Overview.md  01_WBS_Phase1_Infrastructure.md  02_WBS_Phase2_SITL_Baseline.md  03_WBS_Phase3_RL_Control.md  04_WBS_Phase4_HIL_Flight_Control.md  05_WBS_Phase5_Custom_Hardware.md  06_WBS_Phase6_Integration_Validation.md  DIAGRAM_MASTER_PLAN.md  DIAGRAM_STRATEGY_SUMMARY.md
WBS/diagrams/: IMPLEMENTATION_GUIDE.md  PRIORITY_1_COMPLETION_REPORT.md  QUICK_REFERENCE.md  README.md
WBS/diagrams/source/architecture/: D1.5_custom_hardware_architecture.mmd  TEMPLATE_architecture.mmd
WBS/diagrams/source/behavioral/: D6.1_flight_controller_state_machine.mmd  (+4 more)
docs/: contributing.md  index.md
docs/WBS/: 03_WBS_Phase3_RL_Control.md  05_WBS_Phase5_Custom_Hardware.md  06_WBS_Phase6_Integration_Validation.md
docs/WBS/diagrams/: IMPLEMENTATION_GUIDE.md  PRIORITY_1_COMPLETION_REPORT.md  PRIORITY_3_COMPLETION_REPORT.md  PROGRESS_REPORT_2026_02_08.md  QUICK_REFERENCE.md  README.md  RENDERING_GUIDE.md  RENDERING_SUMMARY.md  render_all.ps1
docs/architecture/: system-overview.md
docs/diagrams/: D7.1_requirements_traceability_matrix.mmd  D7.2_requirements_flowdown.mmd  D7.3_verification_matrix.mmd  FINAL_COMPLETION_REPORT.md
docs/gates/: index.md
docs/requirements/: index.md
docs/requirements/output/: index.html  traceability.html
docs/templates/: api-doc-template.md  design-doc-template.md  index.md  srs-template.md  test-plan-template.md  test-report-template.md  user-manual-template.md
firmware/: README.md
hardware/: README.md
reqs/FW/: .doorstop.yml  FW001.yml  FW002.yml  FW003.yml  FW004.yml  FW005.yml  FW006.yml  FW007.yml  FW008.yml  FW009.yml  FW010.yml  FW011.yml  FW012.yml
reqs/HW/: .doorstop.yml  HW001.yml  HW002.yml  HW003.yml  HW004.yml  HW005.yml  HW006.yml  HW007.yml
reqs/RL/: .doorstop.yml  RL001.yml  RL002.yml  RL003.yml  RL004.yml  RL005.yml  RL006.yml  RL007.yml  RL008.yml  RL009.yml  RL010.yml  RL011.yml  RL012.yml  RL013.yml  RL014.yml  RL015.yml  RL016.yml  RL017.yml  RL018.yml
reqs/SAF/: .doorstop.yml  SAF001.yml  SAF002.yml  SAF003.yml  SAF004.yml  SAF005.yml  SAF006.yml  SAF007.yml  SAF008.yml  SAF009.yml  SAF010.yml  SAF011.yml  SAF012.yml  SAF013.yml  SAF014.yml  SAF015.yml  SAF016.yml  SAF017.yml  SAF018.yml  SAF019.yml  SAF020.yml  SAF021.yml  SAF022.yml  SAF023.yml  SAF024.yml  SAF025.yml  SAF026.yml  SAF027.yml  SAF028.yml
reqs/SIM/: .doorstop.yml  SIM001.yml  SIM002.yml  SIM003.yml  SIM004.yml  SIM005.yml  SIM006.yml  SIM007.yml  SIM008.yml  SIM009.yml  SIM010.yml  SIM011.yml  SIM012.yml  SIM013.yml  SIM014.yml  SIM015.yml  SIM016.yml  SIM017.yml  SIM018.yml  SIM019.yml  SIM020.yml  SIM021.yml
reqs/SYS/: .doorstop.yml  SYS001.yml  SYS002.yml  SYS003.yml  SYS004.yml  SYS005.yml  SYS006.yml  SYS007.yml  SYS008.yml  SYS009.yml
simulation/: README.md  __init__.py
simulation/config/: pid_gains.yaml  quadrotor_params.yaml  sensor_params.yaml
simulation/controllers/: __init__.py  cascaded_pid_controller.py  mixer.py  pid.py
simulation/core/: __init__.py  aerodynamics.py  motor_model.py  quadrotor_dynamics.py  quaternion_utils.py  types.py
simulation/gazebo/worlds/: empty_flat.sdf  outdoor_obstacles.sdf
simulation/ros2_ws/src/uav_sim/: package.xml  setup.cfg  setup.py
simulation/ros2_ws/src/uav_sim/config/: bridge_topics.yaml
simulation/ros2_ws/src/uav_sim/launch/: sitl.launch.py  sitl_headless.launch.py  sitl_rl.launch.py
simulation/ros2_ws/src/uav_sim/uav_sim/: pid_controller_node.py  rl_policy_node.py
simulation/scripts/: build_ws.sh  run_rl_gazebo.sh  run_sitl.sh
simulation/sensors/: __init__.py  barometer.py  gps.py  imu.py
simulation/tests/: __init__.py  conftest.py  test_aerodynamics.py  test_barometer.py  test_cascaded_pid.py  test_gps.py  test_imu.py  test_mixer.py  test_motor_model.py  test_pid.py  test_quadrotor_dynamics.py  test_quaternion_utils.py  test_types.py
tests/: README.md  conftest.py
tools/: README.md
tools/docker/: Dockerfile.firmware  Dockerfile.sim  docker-compose.yml
tools/scripts/: generate_requirements.py
training/: README.md
training/callbacks/: __init__.py  eval_and_checkpoint.py
training/configs/: hover_env.yaml  train_config.py  train_hover.yaml
training/envs/: __init__.py  config.py  quadrotor_hover_env.py
training/envs/tests/: __init__.py  conftest.py  test_quadrotor_hover_env.py
training/notebooks/: eval_gazebo_tensorboard.ipynb  train_hover_live.ipynb
training/scripts/: smoke_test_env.py  train_hover.py
training/scripts/tests/: __init__.py  test_train_hover.py
(+55 files in other folders)
